cloud-formation/standard/cf-tmpl.json
{
  "Description" : "AWS CloudFormation Template for PNDA. Creates a VPC with Private and Public IP subnets, with access to most instances via a single public bastion node. Based in part on several sample templates provided by Amazon. Copyright (c) 2016 Cisco and/or its affiliates. This software is licensed to you under the terms of the Apache License, Version 2.0 (the \"License\"). You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0   The code, technical concepts, a [...]
  "Parameters" : {
    "pndaCluster" : {
      "Type" : "String",
      "Default" : "pnda",
      "Description" : "Name for this cluster"
    },
    "instancetypeBastion" : {
      "Type" : "String",
      "Default" : "t2.medium",
      "Description" : "Instance type for the access bastion"
    },    
    "instancetypeLogserver" : {
      "Type" : "String",
      "Default" : "m3.large",
      "Description" : "Instance type for logserver"
    },
    "instancetypeDbZookeeper" : {
      "Type" : "String",
      "Default" : "m3.large",
      "Description" : "Instance type for databus zookeeper"
    },
    "instancetypeDbKafka" : {
      "Type" : "String",
      "Default" : "m3.xlarge",
      "Description" : "Instance type for databus kafka"
    },
    "instancetypeCdhMgr" : {
      "Type" : "String",
      "Default" : "m3.2xlarge",
      "Description" : "Instance type for CDH management"
    },
    "instancetypeCdhDn" : {
      "Type" : "String",
      "Default" : "m4.2xlarge",
      "Description" : "Instance type for CDH datanode"
    },
    "instancetypeOpenTsdb" : {
      "Type" : "String",
      "Default" : "m3.xlarge",
      "Description" : "Instance type for open TSDB"
    },
    "instancetypeJupyter" : {
      "Type" : "String",
      "Default" : "m3.large",
      "Description" : "Instance type for Jupyter"
    },
    "instancetypeSaltmaster" : {
      "Type" : "String",
      "Default" : "m3.large",
      "Description" : "Instance type for saltmaster"
    },
    "instancetypeCdhCm" : {
      "Type" : "String",
      "Default" : "m3.xlarge",
      "Description" : "Instance type for CDH Cloudera Manager"
    },
    "instancetypeCdhEdge" : {
      "Type" : "String",
      "Default" : "t2.medium",
      "Description" : "Instance type for CDH edge node"
    },
    "instancetypeDbTools" : {
      "Type" : "String",
      "Default" : "m3.large",
      "Description" : "Instance type for databus tools"
    },
    "whitelistSshAccess" : {
      "Type" : "String",
      "Default" : "0.0.0.0/0",
      "Description" : "Whitelist for external access to ssh"
    },    
    "whitelistUiAccess" : {
      "Type" : "String",
      "Default" : "0.0.0.0/0",
      "Description" : "Whitelist for external access to UIs"
    },
    "imageId" : {
      "Type" : "String",
      "Default" : "ami-f95ef58a",
      "Description" : "Image to use for instances"
    },
    "keyName" : {
      "Type" : "String",
      "Default" : "keyname",
      "Description" : "Keypair to enable for ssh access to instances"
    },
    "dhcpDomain" : {
      "Type" : "String",
      "Default" : "eu-west-1.compute.internal",
      "Description" : "Domain name for instances"
    },
    "logVolumeSizeGb" : {
      "Type" : "String",
      "Default" : "10",
      "Description" : "Size in GB for the log volume"
    }
  },
  "Mappings" : {
    "SubnetConfig" : {
      "VPC"     : { "CIDR" : "10.0.0.0/16" },
      "Public"  : { "CIDR" : "10.0.0.0/24" },
      "Private"  : { "CIDR" : "10.0.1.0/24"}
    } 
  },  
  "AWSTemplateFormatVersion": "2010-09-09",
  "Resources": {
    "VPC" : {
      "Type" : "AWS::EC2::VPC",
      "Properties" : {
        "EnableDnsSupport" : "true",
        "EnableDnsHostnames" : "true",
        "CidrBlock" : { "Fn::FindInMap" : [ "SubnetConfig", "VPC", "CIDR" ]},
        "Tags" : [
          { "Key" : "Application", "Value" : { "Ref" : "AWS::StackName" } },
          { "Key" : "Network", "Value" : "Public" }
        ]
      }
    },

    "PublicSubnet" : {
      "Type" : "AWS::EC2::Subnet",
      "Properties" : {
        "VpcId" : { "Ref" : "VPC" },
        "CidrBlock" : { "Fn::FindInMap" : [ "SubnetConfig", "Public", "CIDR" ]},
        "Tags" : [
          { "Key" : "Application", "Value" : { "Ref" : "AWS::StackName" } },
          { "Key" : "Network", "Value" : "Public" }
        ]
      }
    },

    "InternetGateway" : {
      "Type" : "AWS::EC2::InternetGateway",
      "Properties" : {
        "Tags" : [
          { "Key" : "Application", "Value" : { "Ref" : "AWS::StackName" } },
          { "Key" : "Network", "Value" : "Public" }
        ]
      }
    },

    "GatewayToInternet" : {
       "Type" : "AWS::EC2::VPCGatewayAttachment",
       "Properties" : {
         "VpcId" : { "Ref" : "VPC" },
         "InternetGatewayId" : { "Ref" : "InternetGateway" }
       }
    },

    "PublicRouteTable" : {
      "Type" : "AWS::EC2::RouteTable",
      "Properties" : {
        "VpcId" : { "Ref" : "VPC" },
        "Tags" : [
          { "Key" : "Application", "Value" : { "Ref" : "AWS::StackName" } },
          { "Key" : "Network", "Value" : "Public" }
        ]
      }
    },

    "PublicRoute" : {
      "Type" : "AWS::EC2::Route",
      "DependsOn" : "GatewayToInternet",
      "Properties" : {
        "RouteTableId" : { "Ref" : "PublicRouteTable" },
        "DestinationCidrBlock" : "0.0.0.0/0",
        "GatewayId" : { "Ref" : "InternetGateway" }
      }
    },

    "PublicSubnetRouteTableAssociation" : {
      "Type" : "AWS::EC2::SubnetRouteTableAssociation",
      "Properties" : {
        "SubnetId" : { "Ref" : "PublicSubnet" },
        "RouteTableId" : { "Ref" : "PublicRouteTable" }
      }
    },

    "PublicNetworkAcl" : {
      "Type" : "AWS::EC2::NetworkAcl",
      "Properties" : {
        "VpcId" : { "Ref" : "VPC" },
        "Tags" : [
          { "Key" : "Application", "Value" : { "Ref" : "AWS::StackName" } },
          { "Key" : "Network", "Value" : "Public" }
        ]
      }
    },

    "InboundHTTPPublicNetworkAclEntry" : {
      "Type" : "AWS::EC2::NetworkAclEntry",
      "Properties" : {
        "NetworkAclId" : { "Ref" : "PublicNetworkAcl" },
        "RuleNumber" : "100",
        "Protocol" : "6",
        "RuleAction" : "allow",
        "Egress" : "false",
        "CidrBlock" : "0.0.0.0/0",
        "PortRange" : { "From" : "80", "To" : "80" }
      }
    },

    "InboundHTTPSPublicNetworkAclEntry" : {
      "Type" : "AWS::EC2::NetworkAclEntry",
      "Properties" : {
        "NetworkAclId" : { "Ref" : "PublicNetworkAcl" },
        "RuleNumber" : "101",
        "Protocol" : "6",
        "RuleAction" : "allow",
        "Egress" : "false",
        "CidrBlock" : "0.0.0.0/0",
        "PortRange" : { "From" : "443", "To" : "443" }
      }
    },

    "InboundSSHPublicNetworkAclEntry" : {
      "Type" : "AWS::EC2::NetworkAclEntry",
      "Properties" : {
        "NetworkAclId" : { "Ref" : "PublicNetworkAcl" },
        "RuleNumber" : "102",
        "Protocol" : "6",
        "RuleAction" : "allow",
        "Egress" : "false",
        "CidrBlock" : "0.0.0.0/0",
        "PortRange" : { "From" : "22", "To" : "22" }
      }
    },

    "InboundNtpPublicNetworkAclEntry" : {
      "Type" : "AWS::EC2::NetworkAclEntry",
      "Properties" : {
        "NetworkAclId" : { "Ref" : "PublicNetworkAcl" },
        "RuleNumber" : "103",
        "Protocol" : "17",
        "RuleAction" : "allow",
        "Egress" : "false",
        "CidrBlock" : { "Ref" : "whitelistSshAccess" },
        "PortRange" : { "From" : "123", "To" : "123" }
      }
    },

    "InboundEphemeralPublicNetworkAclEntry" : {
      "Type" : "AWS::EC2::NetworkAclEntry",
      "Properties" : {
        "NetworkAclId" : { "Ref" : "PublicNetworkAcl" },
        "RuleNumber" : "104",
        "Protocol" : "6",
        "RuleAction" : "allow",
        "Egress" : "false",
        "CidrBlock" : "0.0.0.0/0",
        "PortRange" : { "From" : "1024", "To" : "65535" }
      }
    },

    "InboundEphemeralUdpPublicNetworkAclEntry" : {
      "Type" : "AWS::EC2::NetworkAclEntry",
      "Properties" : {
        "NetworkAclId" : { "Ref" : "PublicNetworkAcl" },
        "RuleNumber" : "105",
        "Protocol" : "17",
        "RuleAction" : "allow",
        "Egress" : "false",
        "CidrBlock" : "0.0.0.0/0",
        "PortRange" : { "From" : "1024", "To" : "65535" }
      }
    },

    "OutboundPublicNetworkAclEntry" : {
      "Type" : "AWS::EC2::NetworkAclEntry",
      "Properties" : {
        "NetworkAclId" : { "Ref" : "PublicNetworkAcl" },
        "RuleNumber" : "100",
        "Protocol" : "6",
        "RuleAction" : "allow",
        "Egress" : "true",
        "CidrBlock" : "0.0.0.0/0",
        "PortRange" : { "From" : "0", "To" : "65535" }
      }
    },

    "OutboundPublicNetworkUdpAclEntry" : {
      "Type" : "AWS::EC2::NetworkAclEntry",
      "Properties" : {
        "NetworkAclId" : { "Ref" : "PublicNetworkAcl" },
        "RuleNumber" : "101",
        "Protocol" : "17",
        "RuleAction" : "allow",
        "Egress" : "true",
        "CidrBlock" : "0.0.0.0/0",
        "PortRange" : { "From" : "0", "To" : "65535" }
      }
    },

    "PublicSubnetNetworkAclAssociation" : {
      "Type" : "AWS::EC2::SubnetNetworkAclAssociation",
      "Properties" : {
        "SubnetId" : { "Ref" : "PublicSubnet" },
        "NetworkAclId" : { "Ref" : "PublicNetworkAcl" }
      }
    },

    "PrivateSubnet" : {
      "Type" : "AWS::EC2::Subnet",
      "Properties" : {
        "VpcId" : { "Ref" : "VPC" },
        "CidrBlock" : { "Fn::FindInMap" : [ "SubnetConfig", "Private", "CIDR" ]},
        "Tags" : [
          { "Key" : "Application", "Value" : { "Ref" : "AWS::StackName" } },
          { "Key" : "Network", "Value" : "Private" }
        ]
      }
    },
    "NAT" : {
      "DependsOn" : "GatewayToInternet",
      "Type" : "AWS::EC2::NatGateway",
      "Properties" : {
        "AllocationId" : { "Fn::GetAtt" : ["EIP", "AllocationId"]},
        "SubnetId" : { "Ref" : "PublicSubnet"}
      }
    },
    "EIP" : {
      "Type" : "AWS::EC2::EIP",
      "Properties" : {
        "Domain" : "vpc"
      }
    },
    "PrivateRouteTable" : {
      "Type" : "AWS::EC2::RouteTable",
      "Properties" : {
        "VpcId" : { "Ref" : "VPC" },
        "Tags" : [
          { "Key" : "Application", "Value" : { "Ref" : "AWS::StackName" } },
          { "Key" : "Network", "Value" : "Private" }
        ]
      }
    },
    "PrivateRoute" : {
      "Type" : "AWS::EC2::Route",
      "Properties" : {
        "RouteTableId" : { "Ref" : "PrivateRouteTable" },
        "DestinationCidrBlock" : "0.0.0.0/0",
        "NatGatewayId" : { "Ref" : "NAT" }
      }
    },
    "PrivateSubnetRouteTableAssociation" : {
         "Type" : "AWS::EC2::SubnetRouteTableAssociation",
         "Properties" : {
            "SubnetId" : { "Ref" : "PrivateSubnet" },
            "RouteTableId" : { "Ref" : "PrivateRouteTable" }
         }
    },
    "instanceBastion": {
      "Type": "AWS::EC2::Instance",
      "Properties": {
        "DisableApiTermination": "false",
        "InstanceInitiatedShutdownBehavior": "stop",
        "ImageId": { "Ref" : "imageId" },
        "InstanceType": { "Ref" : "instancetypeBastion" },
        "KeyName": { "Ref" : "keyName" },
        "Monitoring": "false",
        "Tags": [
          {
            "Key": "Name",
            "Value": {"Fn::Join" : [ "-", [ {"Ref": "pndaCluster"}, "bastion" ] ]}
          },
          {
            "Key": "pnda_cluster",
            "Value": {"Ref": "pndaCluster"}
          },
          {
            "Key": "node_type",
            "Value": "bastion"
          },
          {
            "Key": "node_idx",
            "Value": ""
          }
        ],
        "BlockDeviceMappings" : [
          {
              "DeviceName" : "/dev/sda1",
              "Ebs" : { "VolumeSize" : "500" }
          },
          {
              "DeviceName" : "/dev/sdc",
              "Ebs" : { "VolumeSize" : {"Ref": "logVolumeSizeGb"} }
          }        
        ],
        "NetworkInterfaces": [
          {
            "DeleteOnTermination": "true",
            "Description": "Primary network interface",
            "DeviceIndex": 0,
            "SubnetId": {"Ref": "PublicSubnet"},
            "GroupSet": [{"Ref": "sshSg"}],
            "AssociatePublicIpAddress": "true"
          }
        ]
      }
    },
    "instanceLogserver": {
      "Type": "AWS::EC2::Instance",
      "Properties": {
        "DisableApiTermination": "false",
        "InstanceInitiatedShutdownBehavior": "stop",
        "ImageId": { "Ref" : "imageId" },
        "InstanceType": { "Ref" : "instancetypeLogserver" },
        "SubnetId": { "Ref" : "PrivateSubnet" },        
        "KeyName": { "Ref" : "keyName" },
        "Monitoring": "false",
        "Tags": [
          {
            "Key": "Name",
            "Value": {"Fn::Join" : [ "-", [ {"Ref": "pndaCluster"}, "logserver" ] ]}
          },
          {
            "Key": "pnda_cluster",
            "Value": {"Ref": "pndaCluster"}
          },
          {
            "Key": "node_type",
            "Value": "logserver"
          },
          {
            "Key": "node_idx",
            "Value": ""
          }
        ],
        "BlockDeviceMappings" : [
          {
              "DeviceName" : "/dev/sda1",
              "Ebs" : { "VolumeSize" : "500" }
          },
          {
              "DeviceName" : "/dev/sdc",
              "Ebs" : { "VolumeSize" : {"Ref": "logVolumeSizeGb"} }
          }        
        ],
        "SecurityGroupIds": [ {"Ref": "pndaSg"} ]
      }
    },
   "instanceZookeeper": {
      "Type": "AWS::EC2::Instance",
      "Properties": {
        "DisableApiTermination": "false",
        "InstanceInitiatedShutdownBehavior": "stop",
        "ImageId": { "Ref" : "imageId" },
        "InstanceType": { "Ref" : "instancetypeDbZookeeper" },
        "SubnetId": { "Ref" : "PrivateSubnet" },        
        "KeyName": { "Ref" : "keyName" },
        "Monitoring": "false",
        "Tags": [
          {
            "Key": "Name",
            "Value": {"Fn::Join" : [ "-", [ {"Ref": "pndaCluster"}, "zk-$node_idx$" ] ]}
          },
          {
            "Key": "pnda_cluster",
            "Value": {"Ref": "pndaCluster"}
          },
          {
            "Key": "node_type",
            "Value": "zk"
          },
          {
            "Key": "node_idx",
            "Value": "$node_idx$"
          }

        ],
        "BlockDeviceMappings" : [
          {
              "DeviceName" : "/dev/sda1",
              "Ebs" : { "VolumeSize" : "30" }
          },         
          {
              "DeviceName"  : "/dev/sdc",
              "VirtualName" : "ephemeral0"
          },
          {
              "DeviceName"  : "/dev/sdd",
              "VirtualName" : "ephemeral1"
          }          
        ],       
        "SecurityGroupIds": [ {"Ref": "pndaSg"} ]
      }
    },
    "instanceKafka": {
      "Type": "AWS::EC2::Instance",
      "Properties": {
        "DisableApiTermination": "false",
        "InstanceInitiatedShutdownBehavior": "stop",
        "ImageId": { "Ref" : "imageId" },
        "InstanceType": { "Ref" : "instancetypeDbKafka" },
        "SubnetId": { "Ref" : "PrivateSubnet" },
        "KeyName": { "Ref" : "keyName" },
        "Monitoring": "false",
        "Tags": [
          {
            "Key": "Name",
            "Value": {"Fn::Join" : [ "-", [ {"Ref": "pndaCluster"}, "kafka-$node_idx$" ] ]}
          },
          {
            "Key": "pnda_cluster",
            "Value": {"Ref": "pndaCluster"}
          },
          {
            "Key": "node_type",
            "Value": "kafka"
          },
          {
            "Key": "node_idx",
            "Value": "$node_idx$"
          }
        ],
        "BlockDeviceMappings" : [
          {
              "DeviceName" : "/dev/sda1",
              "Ebs" : { "VolumeSize" : "50" }
          },         
          {
              "DeviceName"  : "/dev/sdc",
              "VirtualName" : "ephemeral0"
          },
          {
              "DeviceName"  : "/dev/sdd",
              "VirtualName" : "ephemeral1"
          }          
        ],
        "SecurityGroupIds": [ {"Ref": "pndaSg"} ]
      }
    },
    "instanceJupyter": {
      "Type": "AWS::EC2::Instance",
      "Properties": {
        "DisableApiTermination": "false",
        "InstanceInitiatedShutdownBehavior": "stop",
        "ImageId": { "Ref" : "imageId" },
        "InstanceType": { "Ref" : "instancetypeJupyter" },
        "SubnetId": { "Ref" : "PrivateSubnet" },
        "KeyName": { "Ref" : "keyName" },
        "Monitoring": "false",
        "Tags": [
          {
            "Key": "Name",
            "Value": {"Fn::Join" : [ "-", [ {"Ref": "pndaCluster"}, "jupyter" ] ]}
          },
          {
            "Key": "pnda_cluster",
            "Value": {"Ref": "pndaCluster"}
          },
          {
            "Key": "node_type",
            "Value": "jupyter"
          },
          {
            "Key": "node_idx",
            "Value": ""
          }
        ],
        "BlockDeviceMappings" : [
          {
              "DeviceName" : "/dev/sda1",
              "Ebs" : { "VolumeSize" : "30" }
          },         
          {
              "DeviceName"  : "/dev/sdc",
              "VirtualName" : "ephemeral0"
          },
          {
              "DeviceName"  : "/dev/sdd",
              "VirtualName" : "ephemeral1"
          }          
        ],
        "SecurityGroupIds": [ {"Ref": "pndaSg"} ]
      }
    },
    "instanceSaltmaster": {
      "Type": "AWS::EC2::Instance",
      "Properties": {
        "DisableApiTermination": "false",
        "InstanceInitiatedShutdownBehavior": "stop",
        "ImageId": { "Ref" : "imageId" },
        "InstanceType": { "Ref" : "instancetypeSaltmaster" },
        "SubnetId": { "Ref" : "PrivateSubnet" },
        "KeyName": { "Ref" : "keyName" },
        "Monitoring": "false",
        "Tags": [
          {
            "Key": "Name",
            "Value": {"Fn::Join" : [ "-", [ {"Ref": "pndaCluster"}, "saltmaster" ] ]}
          },
          {
            "Key": "pnda_cluster",
            "Value": {"Ref": "pndaCluster"}
          },
          {
            "Key": "node_type",
            "Value": "saltmaster"
          },
          {
            "Key": "node_idx",
            "Value": ""
          }
        ],
        "BlockDeviceMappings" : [
          {
              "DeviceName" : "/dev/sda1",
              "Ebs" : { "VolumeSize" : "30" }
          },         
          {
              "DeviceName"  : "/dev/sdc",
              "VirtualName" : "ephemeral0"
          },
          {
              "DeviceName"  : "/dev/sdd",
              "VirtualName" : "ephemeral1"
          }          
        ],
        "SecurityGroupIds": [ {"Ref": "pndaSg"} ]
      }
    },
    "instanceCdhDn": {
      "Type": "AWS::EC2::Instance",
      "Properties": {
        "DisableApiTermination": "false",
        "InstanceInitiatedShutdownBehavior": "stop",
        "EbsOptimized": "true",
        "ImageId": { "Ref" : "imageId" },
        "InstanceType": { "Ref" : "instancetypeCdhDn" },
        "SubnetId": { "Ref" : "PrivateSubnet" },
        "KeyName": { "Ref" : "keyName" },
        "Monitoring": "false",
        "Tags": [
          {
            "Key": "Name",
            "Value": {"Fn::Join" : [ "-", [ {"Ref": "pndaCluster"}, "cdh-dn-$node_idx$" ] ]}
          },
          {
            "Key": "pnda_cluster",
            "Value": {"Ref": "pndaCluster"}
          },
          {
            "Key": "node_type",
            "Value": "cdh-dn"
          },
          {
            "Key": "node_idx",
            "Value": "$node_idx$"
          }
        ],
        "BlockDeviceMappings" : [
          {
              "DeviceName" : "/dev/sda1",
              "Ebs" : { "VolumeSize" : "30" }
          },
          {
              "DeviceName" : "/dev/sdc",
              "Ebs" : { "VolumeSize" : {"Ref": "logVolumeSizeGb"} }
          },                   
          {
              "DeviceName"  : "/dev/sdd",
              "Ebs" : { "VolumeSize" : "1024" }
          }
        ],
        "SecurityGroupIds": [ {"Ref": "pndaSg"} ]
      }
    },
    "instanceOpenTsdb": {
      "Type": "AWS::EC2::Instance",
      "Properties": {
        "DisableApiTermination": "false",
        "InstanceInitiatedShutdownBehavior": "stop",
        "ImageId": { "Ref" : "imageId" },
        "InstanceType": { "Ref" : "instancetypeOpenTsdb" },
        "SubnetId": { "Ref" : "PrivateSubnet" },
        "KeyName": { "Ref" : "keyName" },
        "Monitoring": "false",
        "Tags": [
          {
            "Key": "Name",
            "Value": {"Fn::Join" : [ "-", [ {"Ref": "pndaCluster"}, "opentsdb-$node_idx$" ] ]}
          },
          {
            "Key": "pnda_cluster",
            "Value": {"Ref": "pndaCluster"}
          },
          {
            "Key": "node_type",
            "Value": "opentsdb"
          },
          {
            "Key": "node_idx",
            "Value": "$node_idx$"
          }
        ],
        "BlockDeviceMappings" : [
          {
              "DeviceName" : "/dev/sda1",
              "Ebs" : { "VolumeSize" : "30" }
          },         
          {
              "DeviceName"  : "/dev/sdc",
              "VirtualName" : "ephemeral0"
          },
          {
              "DeviceName"  : "/dev/sdd",
              "VirtualName" : "ephemeral1"
          }          
        ],
        "SecurityGroupIds": [ {"Ref": "pndaSg"} ]
      }
    },
    "instanceCdhEdge": {
      "Type": "AWS::EC2::Instance",
      "Properties": {
        "DisableApiTermination": "false",
        "InstanceInitiatedShutdownBehavior": "stop",
        "ImageId": { "Ref" : "imageId" },
        "InstanceType": { "Ref" : "instancetypeCdhEdge" },
        "SubnetId": { "Ref" : "PrivateSubnet" },
        "KeyName": { "Ref" : "keyName" },
        "Monitoring": "false",
        "Tags": [
          {
            "Key": "Name",
            "Value": {"Fn::Join" : [ "-", [ {"Ref": "pndaCluster"}, "cdh-edge" ] ]}
          },
          {
            "Key": "pnda_cluster",
            "Value": {"Ref": "pndaCluster"}
          },
          {
            "Key": "node_type",
            "Value": "cdh-edge"
          },
          {
            "Key": "node_idx",
            "Value": ""
          }
        ],
        "BlockDeviceMappings" : [
          {
              "DeviceName" : "/dev/sda1",
              "Ebs" : { "VolumeSize" : "250" }
          },
          {
              "DeviceName" : "/dev/sdc",
              "Ebs" : { "VolumeSize" : {"Ref": "logVolumeSizeGb"} }
          }
        ],
        "SecurityGroupIds": [ {"Ref": "pndaSg"} ]
      }
    },
    "instanceCdhCm": {
      "Type": "AWS::EC2::Instance",
      "Properties": {
        "DisableApiTermination": "false",
        "InstanceInitiatedShutdownBehavior": "stop",
        "ImageId": { "Ref" : "imageId" },
        "InstanceType": { "Ref" : "instancetypeCdhCm" },
        "SubnetId": { "Ref" : "PrivateSubnet" },
        "KeyName": { "Ref" : "keyName" },
        "Monitoring": "false",
        "Tags": [
          {
            "Key": "Name",
            "Value": {"Fn::Join" : [ "-", [ {"Ref": "pndaCluster"}, "cdh-cm" ] ]}
          },
          {
            "Key": "pnda_cluster",
            "Value": {"Ref": "pndaCluster"}
          },
          {
            "Key": "node_type",
            "Value": "cdh-cm"
          },
          {
            "Key": "node_idx",
            "Value": ""
          }
        ],
        "BlockDeviceMappings" : [
          {
              "DeviceName" : "/dev/sda1",
              "Ebs" : { "VolumeSize" : "30" }
          },         
          {
              "DeviceName"  : "/dev/sdc",
              "VirtualName" : "ephemeral0"
          },
          {
              "DeviceName"  : "/dev/sdd",
              "VirtualName" : "ephemeral1"
          }          
        ],
        "SecurityGroupIds": [ {"Ref": "pndaSg"} ]
      }
    },
    "instanceDbTools": {
      "Type": "AWS::EC2::Instance",
      "Properties": {
        "DisableApiTermination": "false",
        "InstanceInitiatedShutdownBehavior": "stop",
        "ImageId": { "Ref" : "imageId" },
        "InstanceType": { "Ref" : "instancetypeDbTools" },
        "SubnetId": { "Ref" : "PrivateSubnet" },
        "KeyName": { "Ref" : "keyName" },
        "Monitoring": "false",
        "Tags": [
          {
            "Key": "Name",
            "Value": {"Fn::Join" : [ "-", [ {"Ref": "pndaCluster"}, "tools" ] ]}
          },
          {
            "Key": "pnda_cluster",
            "Value": {"Ref": "pndaCluster"}
          },
          {
            "Key": "node_type",
            "Value": "tools"
          },
          {
            "Key": "node_idx",
            "Value": ""
          }
        ],
        "BlockDeviceMappings" : [
          {
              "DeviceName" : "/dev/sda1",
              "Ebs" : { "VolumeSize" : "30" }
          },         
          {
              "DeviceName"  : "/dev/sdc",
              "VirtualName" : "ephemeral0"
          },
          {
              "DeviceName"  : "/dev/sdd",
              "VirtualName" : "ephemeral1"
          }          
        ],
        "SecurityGroupIds": [ {"Ref": "pndaSg"} ]
      }
    },
    "instanceCdhMgr1": {
      "Type": "AWS::EC2::Instance",
      "Properties": {
        "DisableApiTermination": "false",
        "InstanceInitiatedShutdownBehavior": "stop",
        "ImageId": { "Ref" : "imageId" },
        "InstanceType": { "Ref" : "instancetypeCdhMgr" },
        "SubnetId": { "Ref" : "PrivateSubnet" },
        "KeyName": { "Ref" : "keyName" },
        "Monitoring": "false",
        "Tags": [
          {
            "Key": "Name",
            "Value": {"Fn::Join" : [ "-", [ {"Ref": "pndaCluster"}, "cdh-mgr-1" ] ]}
          },
          {
            "Key": "pnda_cluster",
            "Value": {"Ref": "pndaCluster"}
          },
          {
            "Key": "node_type",
            "Value": "cdh-mgr-1"
          },
          {
            "Key": "node_idx",
            "Value": ""
          }
        ],
        "BlockDeviceMappings" : [
          {
              "DeviceName" : "/dev/sda1",
              "Ebs" : { "VolumeSize" : "250" }
          },
          {
              "DeviceName" : "/dev/sdc",
              "Ebs" : { "VolumeSize" : {"Ref": "logVolumeSizeGb"} }
          }
        ],
        "SecurityGroupIds": [ {"Ref": "pndaSg"} ]
      }
    },
    "instanceCdhMgr2": {
      "Type": "AWS::EC2::Instance",
      "Properties": {
        "DisableApiTermination": "false",
        "InstanceInitiatedShutdownBehavior": "stop",
        "ImageId": { "Ref" : "imageId" },
        "InstanceType": { "Ref" : "instancetypeCdhMgr" },
        "SubnetId": { "Ref" : "PrivateSubnet" },
        "KeyName": { "Ref" : "keyName" },
        "Monitoring": "false",
        "Tags": [
          {
            "Key": "Name",
            "Value": {"Fn::Join" : [ "-", [ {"Ref": "pndaCluster"}, "cdh-mgr-2" ] ]}
          },
          {
            "Key": "pnda_cluster",
            "Value": {"Ref": "pndaCluster"}
          },
          {
            "Key": "node_type",
            "Value": "cdh-mgr-2"
          },
          {
            "Key": "node_idx",
            "Value": ""
          }
        ],
        "BlockDeviceMappings" : [
          {
              "DeviceName" : "/dev/sda1",
              "Ebs" : { "VolumeSize" : "250" }
          },
          {
              "DeviceName" : "/dev/sdc",
              "Ebs" : { "VolumeSize" : {"Ref": "logVolumeSizeGb"} }
          }
        ],
        "SecurityGroupIds": [ {"Ref": "pndaSg"} ]
      }
    },
    "instanceCdhMgr3": {
      "Type": "AWS::EC2::Instance",
      "Properties": {
        "DisableApiTermination": "false",
        "InstanceInitiatedShutdownBehavior": "stop",
        "ImageId": { "Ref" : "imageId" },
        "InstanceType": { "Ref" : "instancetypeCdhMgr" },
        "SubnetId": { "Ref" : "PrivateSubnet" },
        "KeyName": { "Ref" : "keyName" },
        "Monitoring": "false",
        "Tags": [
          {
            "Key": "Name",
            "Value": {"Fn::Join" : [ "-", [ {"Ref": "pndaCluster"}, "cdh-mgr-3" ] ]}
          },
          {
            "Key": "pnda_cluster",
            "Value": {"Ref": "pndaCluster"}
          },
          {
            "Key": "node_type",
            "Value": "cdh-mgr-3"
          },
          {
            "Key": "node_idx",
            "Value": ""
          }
        ],
        "BlockDeviceMappings" : [
          {
              "DeviceName" : "/dev/sda1",
              "Ebs" : { "VolumeSize" : "250" }
          },
          {
              "DeviceName" : "/dev/sdc",
              "Ebs" : { "VolumeSize" : {"Ref": "logVolumeSizeGb"} }
          }
        ],
        "SecurityGroupIds": [ {"Ref": "pndaSg"} ]
      }
    },
    "instanceCdhMgr4": {
      "Type": "AWS::EC2::Instance",
      "Properties": {
        "DisableApiTermination": "false",
        "InstanceInitiatedShutdownBehavior": "stop",
        "ImageId": { "Ref" : "imageId" },
        "InstanceType": { "Ref" : "instancetypeCdhMgr" },
        "SubnetId": { "Ref" : "PrivateSubnet" },
        "KeyName": { "Ref" : "keyName" },
        "Monitoring": "false",
        "Tags": [
          {
            "Key": "Name",
            "Value": {"Fn::Join" : [ "-", [ {"Ref": "pndaCluster"}, "cdh-mgr-4" ] ]}
          },
          {
            "Key": "pnda_cluster",
            "Value": {"Ref": "pndaCluster"}
          },
          {
            "Key": "node_type",
            "Value": "cdh-mgr-4"
          },
          {
            "Key": "node_idx",
            "Value": ""
          }
        ],
        "BlockDeviceMappings" : [
          {
              "DeviceName" : "/dev/sda1",
              "Ebs" : { "VolumeSize" : "250" }
          },
          {
              "DeviceName" : "/dev/sdc",
              "Ebs" : { "VolumeSize" : {"Ref": "logVolumeSizeGb"} }
          }
        ],
        "SecurityGroupIds": [ {"Ref": "pndaSg"} ]
      }
    },
    "sshSg": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "access to pnda instances",
        "VpcId": {"Ref": "VPC"}
      }
    },
   "ingressSsh1": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": {
          "Ref": "sshSg"
        },
        "IpProtocol": "tcp",
        "FromPort": "22",
        "ToPort": "22",
        "CidrIp": { "Ref" : "whitelistSshAccess" }
      }
    },         
    "pndaSg": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "access to pnda UIs",
        "VpcId": {"Ref": "VPC"}
      }
    },
   "ingressSsh2": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": {
          "Ref": "pndaSg"
        },
        "IpProtocol": "tcp",
        "FromPort": "22",
        "ToPort": "22",
        "CidrIp": { "Ref" : "whitelistSshAccess" }
      }
    },     
    "ingressDataManager": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": {
          "Ref": "pndaSg"
        },
        "IpProtocol": "tcp",
        "FromPort": "3123",
        "ToPort": "3123",
        "CidrIp": { "Ref" : "whitelistUiAccess" }
      }
    },
    "ingressConsole": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": {
          "Ref": "pndaSg"
        },
        "IpProtocol": "tcp",
        "FromPort": "80",
        "ToPort": "80",
        "CidrIp": { "Ref" : "whitelistUiAccess" }
      }
    },
    "ingressPackageRepo": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": {
          "Ref": "pndaSg"
        },
        "IpProtocol": "tcp",
        "FromPort": "8000",
        "ToPort": "8000",
        "CidrIp": { "Ref" : "whitelistUiAccess" }
      }
    },
    "ingressKafkaManager": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": {
          "Ref": "pndaSg"
        },
        "IpProtocol": "tcp",
        "FromPort": "9000",
        "ToPort": "9000",
        "CidrIp": { "Ref" : "whitelistUiAccess" }
      }
    },
    "ingressDeploymentManager": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": {
          "Ref": "pndaSg"
        },
        "IpProtocol": "tcp",
        "FromPort": "5000",
        "ToPort": "5000",
        "CidrIp": { "Ref" : "whitelistUiAccess" }
      }
    },
    "ingressOpenTsdb": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": {
          "Ref": "pndaSg"
        },
        "IpProtocol": "tcp",
        "FromPort": "4242",
        "ToPort": "4242",
        "CidrIp": { "Ref" : "whitelistUiAccess" }
      }
    },
    "ingressCm": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": {
          "Ref": "pndaSg"
        },
        "IpProtocol": "tcp",
        "FromPort": "7180",
        "ToPort": "7180",
        "CidrIp": { "Ref" : "whitelistUiAccess" }
      }
    },
    "ingressDataLogger": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": {
          "Ref": "pndaSg"
        },
        "IpProtocol": "tcp",
        "FromPort": "3001",
        "ToPort": "3001",
        "CidrIp": { "Ref" : "whitelistUiAccess" }
      }
    },
    "ingressLogserver": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": {
          "Ref": "pndaSg"
        },
        "IpProtocol": "tcp",
        "FromPort": "5601",
        "ToPort": "5601",
        "CidrIp": { "Ref" : "whitelistUiAccess" }
      }
    },
    "ingressGrafana": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": {
          "Ref": "pndaSg"
        },
        "IpProtocol": "tcp",
        "FromPort": "3000",
        "ToPort": "3000",
        "CidrIp": { "Ref" : "whitelistUiAccess" }
      }
    },
    "ingressHue": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": {
          "Ref": "pndaSg"
        },
        "IpProtocol": "tcp",
        "FromPort": "8888",
        "ToPort": "8888",
        "CidrIp": { "Ref" : "whitelistUiAccess" }
      }
    },
    "ingressYarn": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": {
          "Ref": "pndaSg"
        },
        "IpProtocol": "tcp",
        "FromPort": "8088",
        "ToPort": "8088",
        "CidrIp": { "Ref" : "whitelistUiAccess" }
      }
    },    
    "ingressInternal": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": {
          "Ref": "pndaSg"
        },
        "IpProtocol": "-1",
        "FromPort": "0",
        "ToPort": "65535",
        "SourceSecurityGroupId": { "Ref" : "pndaSg" }
      }
    },
    "ingressInternalSaltMaster": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": {
          "Ref": "pndaSg"
        },
        "IpProtocol": "-1",
        "FromPort": "4505",
        "ToPort": "4506",
        "SourceSecurityGroupId": { "Ref" : "sshSg" }
      }
    },    
    "egressAll": {
      "Type": "AWS::EC2::SecurityGroupEgress",
      "Properties": {
        "GroupId": {
          "Ref": "pndaSg"
        },
        "IpProtocol": "-1",
        "CidrIp": "0.0.0.0/0"
      }
    }
  },
  "Description": "pnda.pod"
}
